--- a/quiz-preparation/pyproject.toml
+++ b/quiz-preparation/pyproject.toml
@@ -1,10 +1,10 @@
 [project]
-name = "prtc-sdk"
+name = "quiz-preparation"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "openai-agents>=0.2.5",
-    "python-dotenv>=1.1.1",
+    "dotenv>=0.9.9",
+    "openai-agents>=0.3.0",
 ]
